--- a/JumpTableCreate/JumpTableCreate.csproj
+++ b/JumpTableCreate/JumpTableCreate.csproj
@@ -2,8 +2,12 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CreateTable\CreateTable.csproj" />
+  </ItemGroup>
 
 </Project>
